trunk/Archive2/33/f906e4e474e018/output
main.cpp:4:28: error: expected ';' at end of declaration list
    virtual void f1() final noexcept {};
                           ^
                           ;
1 error generated.
