trunk/Archive2/33/f906e4e474e018/main.cpp
struct foo
{
    virtual void f0() noexcept final {};
    virtual void f1() final noexcept {};
};

int main() {}